fixed mobile issue for text messaging image widget for left text align

--- a/app/assets/stylesheets/widgets/single_column/messaging.scss
+++ b/app/assets/stylesheets/widgets/single_column/messaging.scss
@@ -489,6 +489,10 @@
       
       .outer-container {
         flex-direction: row-reverse;
+
+        @include bp(wildcard-max, 780px) {
+          flex-direction: column;
+        }
       }
     }
 
